Fix CachedQueryResult.getAffectedTables() to always return new instance
Agent-Logs-Url: https://github.com/Open-J-Proxy/ojp/sessions/c749887b-7786-4e39-83d3-245ab4fd300b

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>